<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/string_close" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_comic"
        android:lineSpacingExtra="-8dp"
        android:text="@string/siapa_nama_temanmu_dan_emailnya"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNama"
        android:hint="@string/nama_temanmu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/email_temanmu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btSaveFriend"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/bg_but_gray"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhiteFont"
        android:textSize="18sp"
        android:textStyle="normal"
         />

</LinearLayout>