<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profileplayer.ProfilePlayer">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_back_blue" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/ColorBgButGray"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingBottom="40dp">

            <ImageView
                android:id="@+id/IvOuterPhoto"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_outer_profile"
                android:contentDescription="@string/ivFotoUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/ic_people"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic"
                android:text="@string/username"
                android:textColor="@color/colorBgWhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/IvOuterPhoto"
                app:layout_constraintStart_toStartOf="@+id/IvOuterPhoto"
                app:layout_constraintTop_toBottomOf="@+id/IvOuterPhoto" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic"
                android:text="@string/email"
                android:textColor="@color/colorBgWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvName"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btEdit"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_shape_back_blue"
        android:fontFamily="@font/comic"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/colorBgWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/ColorBgButGray" />

</LinearLayout>