<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context=".ui.profileteman.ProfileTeman">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_back_blue" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_below="@+id/ivBack"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_font"
        android:src="@drawable/ic_logo_dark" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_logo"
        android:layout_above="@+id/btadd"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/ColorBgButGray"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/comic"
                android:text="@string/daftar_teman"
                android:textColor="@color/colorBgWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDaftar"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                tools:listitem="@layout/item_teman"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btadd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_shape_back_blue"
        app:backgroundTint="@color/ColorBgButGray"
        android:fontFamily="@font/comic"
        android:text="@string/tambah_teman"
        android:textSize="18sp"
        android:textColor="@color/colorBgWhite"
        android:textStyle="bold" />


</RelativeLayout>