<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:backgroundTint="@color/colorBgWhite"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNama"
            android:layout_toLeftOf="@+id/ivEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nama"
            android:fontFamily="@font/comic"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:layout_toStartOf="@+id/ivEdit" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_toLeftOf="@+id/ivEdit"
            android:layout_below="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/email"
            android:fontFamily="@font/comic"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:layout_toStartOf="@+id/ivEdit" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_alignParentEnd="true"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>