<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pilihlawan.PilihLawan">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_back_blue" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="112dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo_font"
        android:src="@drawable/ic_logo_dark" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/ColorBgButGray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/comic"
                android:text="@string/daftar_teman"
                android:textColor="@color/colorBgWhite"
                android:textSize="26sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDaftar"
                android:layout_margin="20dp"
                tools:listitem="@layout/item_teman" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>