<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profileplayer.EditProfilePlayer">

    <ImageView
        android:id="@+id/btClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/string_close" />

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_people"
            android:contentDescription="@string/imageprofile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="75dp">

            <com.theartofdev.edmodo.cropper.CropImageView
                android:id="@+id/cropImageView"
                android:background="@drawable/bg_profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignRight="@+id/ivProfile"
            android:layout_alignBottom="@+id/ivProfile"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_but_plus"
            android:layout_alignEnd="@+id/ivProfile"
            android:contentDescription="@string/imageprofile" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="250dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font_comic"
                android:lineSpacingExtra="-8dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_et_signinup"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font_comic"
                android:lineSpacingExtra="-8dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_et_signinup"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/bg_but_gray"
                android:fontFamily="@font/comic"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorBgWhite"
                android:textSize="18sp"
                android:textStyle="normal"
                app:backgroundTint="@color/ColorBgButGray" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>